traces/bug_228.txt
src/medit/particle.c:220: error: DEAD_STORE
  The value written to &base (type int) is never used.
Showing all 1 steps of the trace


src/medit/particle.c:220:3: Write of unused value
218.       sc->par.nbpart = MAX_PRT;
219.   
220.     ++base;
         ^
221.     l   = 1;
222.     nbp = 0;
